--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,9 @@ jobs:
   push-to-registry:
     runs-on: ubuntu-latest
     steps:
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Log in to Github Container Registry
@@ -26,5 +29,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ github.repository }}/test-github-actions::${GITHUB_REF/refs\/tags\//}
+          tags: ghcr.io/${{ github.repository }}/test-github-actions::${{ steps.get_version.outputs.VERSION }}
           
