--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,5 +24,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ github.repository }}/test-github-actions::${{ steps.get_version.outputs.VERSION }}
+          tags: ghcr.io/${{ github.repository }}/test-github-actions:${{ steps.get_version.outputs.VERSION }}
           
