--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: test-actions
 
 on:
   push:
-    # Publish semver tags as releases.
+    branches: [ 'master' ]
     tags: [ 'v[0-9]+.[0-9]+' ]
 
 jobs:
@@ -20,9 +20,30 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set image name
+        id: set_image
+        run: echo ::set-output name=IMAGE_NAME::ghcr.io/${{ github.repository }}/test-github-actions:${{ steps.get_version.outputs.VERSION }}
       - name: Build container image
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ github.repository }}/test-github-actions:${{ steps.get_version.outputs.VERSION }}
+          tags: ${{ steps.set_image.outputs.IMAGE_NAME }}
+    outputs:
+      image_name: ${{ steps.set_image.outputs.IMAGE_NAME }}
+          
+  deploy-to-cloud-run:
+    runs-on: ubuntu-latest
+    needs: push-to-registry
+    steps:
+      - name: Set up gcloud
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+      - name: Deploy to Cloud Run
+        uses: google-github-actions/deploy-cloudrun@main
+        with:
+          image: ${{ needs.push-to-registry.outputs.image_name }}
+          service: cloud-run-service
           
