--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,8 +14,8 @@ jobs:
         id: get_version
         with:
           cond: ${{ github.ref != 'refs/heads/master' }}
-          if_true: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-          if_false: echo ::set-output name=VERSION::latest
+          if_true: ${GITHUB_REF/refs\/tags\//}
+          if_false: latest
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Log in to Github Container Registry
@@ -26,7 +26,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set image name
         id: set_image
-        run: echo ::set-output name=IMAGE_NAME::ghcr.io/${{ github.repository }}/test-github-actions:${{ steps.get_version.outputs.VERSION }}
+        run: echo ::set-output name=IMAGE_NAME::ghcr.io/${{ github.repository }}/test-github-actions:${{ steps.get_version.outputs.value }}
       - name: Build container image
         uses: docker/build-push-action@v2
         with:
