--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,48 +6,44 @@ on:
     tags: [ 'v[0-9]+.[0-9]+' ]
 
 jobs:
-  push-to-registry:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get the version
-        uses: haya14busa/action-cond@v1
-        id: get_version
-        with:
-          cond: ${{ github.ref != 'refs/heads/master' }}
-          if_true: ${GITHUB_REF/refs\/tags\//}
-          if_false: latest
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Log in to Github Container Registry
-        uses: docker/login-action@v1.9.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set image name
-        id: set_image
-        run: echo ::set-output name=IMAGE_NAME::gcr.io/${{ github.repository }}/test-github-actions:${{ steps.get_version.outputs.value }}
-      - name: Build container image
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ steps.set_image.outputs.IMAGE_NAME }}
-    outputs:
-      image_name: ${{ steps.set_image.outputs.IMAGE_NAME }}
-          
-  deploy-to-cloud-run:
-    runs-on: ubuntu-latest
-    needs: push-to-registry
-    steps:
-      - name: Set up gcloud
-        uses: google-github-actions/setup-gcloud@master
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-      - name: Deploy to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@main
-        with:
-          image: ${{ needs.push-to-registry.outputs.image_name }}
-          service: cloud-run-service
-          
+
+    deploy:
+
+        name: Setup Gcloud Account
+        runs-on: ubuntu-latest
+        env:
+          IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
+        steps:
+        - name: Get the version
+          uses: haya14busa/action-cond@v1
+          id: get_version
+          with:
+            cond: ${{ github.ref != 'refs/heads/master' }}
+            if_true: ${GITHUB_REF/refs\/tags\//}
+            if_false: latest
+            
+        - name: Set image name
+          id: set_image
+          run: echo ::set-output name=IMAGE_NAME::gcr.io/${{ github.repository }}/test-github-actions:${{ steps.get_version.outputs.value }}
+        
+        - name: Login
+          uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+          with:
+            project_id: ${{ secrets.GCP_PROJECT_ID }}
+            service_account_email: ${{ secrets.GCP_EMAIL }}
+            service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+
+        - name: Configure Docker
+          run: gcloud auth configure-docker --quiet
+
+        - name: Checkout repository
+          uses: actions/checkout@v2
+
+        - name: Build Docker image
+          run: docker build . -t ${{ steps.set_image.outputs.IMAGE_NAME }}
+
+        - name: Push Docker image
+          run: docker push ${{ steps.set_image.outputs.IMAGE_NAME }}
+
+        - name: Deploy Docker image
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image ${{ steps.set_image.outputs.IMAGE_NAME }} --region us-central1 --platform managed          
