--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,4 +44,4 @@ jobs:
           run: docker push ${{ steps.set_image.outputs.IMAGE_NAME }}
 
         - name: Deploy Docker image
-          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image ${{ steps.set_image.outputs.IMAGE_NAME }} --port 5000 --region us-central1 --platform managed          
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image ${{ steps.set_image.outputs.IMAGE_NAME }} --region us-central1 --platform managed          
