--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Get the version
-          uses: haya14busa/action-cond@v1
           id: get_version
-          with:
-            cond: ${{ github.ref != 'refs/heads/master' }}
-            if_true: ${GITHUB_REF/refs\/tags\//}
-            if_false: latest
-            
+          run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+          
         - name: Set image name
           id: set_image
           run: echo ::set-output name=IMAGE_NAME::gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:${{ steps.get_version.outputs.value }}
