--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           
         - name: Set image name
           id: set_image
-          run: echo ::set-output name=IMAGE_NAME::gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:${{ steps.get_version.outputs.value }}
+          run: echo ::set-output name=IMAGE_NAME::gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:${{ steps.get_version.outputs.VERSION }}
         
         - name: Login
           uses: google-github-actions/setup-gcloud@master
