--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
           run: docker push ${{ steps.set_image.outputs.IMAGE_NAME }}
 
         - name: Deploy Docker image
-          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image ${{ steps.set_image.outputs.IMAGE_NAME }} --region us-central1 --platform managed          
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image ${{ steps.set_image.outputs.IMAGE_NAME }} --region us-central1 --platform managed --timeout "2m"        
